--- a/readme.textile
+++ b/readme.textile
@@ -2,17 +2,21 @@ h1. Jubula GUI tests for Elexis 3.1
 
 Here Niklaus tries to make a new, better environment for running the Jubula GUI-tests.
 
+h2. TODO
+
 The following improvements are planned. Order may be varied depending whether we will encounter unforeseen problems.
 
-* Move to current Jubula-Version 8.2
+* -Move to current Jubula-Version 8.2.-
 * Simplify vastly the ruby scripts. Ideas are:
 ** -Move all config-variables in one (or more) YAML-files- "see":defaults.yaml. They may be overriden be putting your changes into config.yaml
 ** -Add simple script to download Elexis-Opensource from Jenkin-CI- "see":scripts/install_open_source_elexis.rb
 ** Add simple script to use Medelexis-Zip/license.xml from a given local directory
 ** -Add the jubula*jar for running the tests to this project for easy installation- "see":scripts/run_jubula_test.rb
 *** -This file must patch the config.ini or the AUTagent will not start!-
-* Run Jubula-Tests inside a docker environment (to work around libwebkit-gtk problem under Linux)
+* -Run Jubula-Tests inside a docker environment (to work around libwebkit-gtk problem under Linux)-
 * -Test steps above with a very simple Jubula GUI test which creates only a screenshot of the main window. Must check whether running in a docker will create meaningfull (not mostly black) screenshots.- "see":definitions/Screenshot.yaml
+* Ensure that the generated screenshots contain the titel bar. Needs a simple window manager (like lwm, awesome,xfwmw4 or even a whole desktop like xfce4)
+* Add some rake tasks to easily test core components and publishing the docker image
 * Rework visiting all Views and Perspectives to use the Jubula-provided tools
 * Migrate to use Java-based UI test automation. This should ease the pain from other developpers to get a head start.
 * Add a custom articlestamm.xml with a good selection of drugs to make a good demo
@@ -20,7 +24,7 @@ The following improvements are planned. Order may be varied depending whether we
 * Rework some Elexis-GUI elements, e.g.
 ** DatePickers should allow entering a date via the keyboard. This is needed when a consultation for a previous date has to be entered
 * Complete basic tests til we can prove that Elexis creates correct bills
-
+* As we have now the whole Jubula installed inside the container, we should copy the jar from within the container!
 
 h2. concepts
 
@@ -41,10 +45,12 @@ We will probably soon add a possibility to add a specific command before a test 
 
 h2. notes
 
-h3. Why do we not install Jubula on the docker
+h3. Why do we install Jubula in the docker
 
 The following arguments were in favor:
 * Once the docker images is created, running the tests would be easy
+* Installing only the autagent did not work (the plugins directory was missing)
+* Running autrun on the host it was not possible to start Elexis inside the container
 
 The following arguments were against:
 * Jubula 8.2 is quite large (almost 900 MB) after the installation. We are able to zip the needed autagent to about 55MB.
