--- a/readme.textile
+++ b/readme.textile
@@ -16,6 +16,7 @@ The following improvements are planned. Order may be varied depending whether we
 * -Run Jubula-Tests inside a docker environment (to work around libwebkit-gtk problem under Linux)-
 * -Test steps above with a very simple Jubula GUI test which creates only a screenshot of the main window. Must check whether running in a docker will create meaningfull (not mostly black) screenshots.- "see":definitions/Screenshot.yaml
 * Ensure that the generated screenshots contain the titel bar. Needs a simple window manager (like lwm, awesome,xfwmw4 or even a whole desktop like xfce4)
+* Use docker-compose to get rid of hard-code user-name/uid for elexis/1002
 * Add some rake tasks to easily test core components and publishing the docker image
 * Rework visiting all Views and Perspectives to use the Jubula-provided tools
 * Migrate to use Java-based UI test automation. This should ease the pain from other developpers to get a head start.
@@ -25,6 +26,17 @@ The following improvements are planned. Order may be varied depending whether we
 ** DatePickers should allow entering a date via the keyboard. This is needed when a consultation for a previous date has to be entered
 * Complete basic tests til we can prove that Elexis creates correct bills
 * As we have now the whole Jubula installed inside the container, we should copy the jar from within the container!
+
+h2. Jubula API-setup
+
+Target-Definition für api-OSGi.target war unvollständigt. Musste auch die JARs hinzufügen (wegen xmlpull und xstream).
+Danach mussten noch das Manifeste wegen xmlpull, xstream, angepasst werden. 
+Die Pfade + Locale (musste auf en_US geändert werden) stimmten nicht. Sie niklaus.diff. Danach lief alles wie es sollte.
+Replace nighly by http://download.eclipse.org/jubula/release/mars
+
+5 h gebraucht um das Beispiel zum Laufen zu bringen! 
+
+Target angepasst
 
 h2. concepts
 
