--- a/readme.textile
+++ b/readme.textile
@@ -1,6 +1,9 @@
+{toc:style=disc|maxLevel=3}
+
 h1. Jubula GUI tests for Elexis 3.1
 
 Here Niklaus tries to make a new, better environment for running the Jubula GUI-tests.
+
 
 h2. TODO
 
@@ -15,10 +18,20 @@ The following improvements are planned. Order may be varied depending whether we
 *** -This file must patch the config.ini or the AUTagent will not start!-
 * -Run Jubula-Tests inside a docker environment (to work around libwebkit-gtk problem under Linux)-
 * -Test steps above with a very simple Jubula GUI test which creates only a screenshot of the main window. Must check whether running in a docker will create meaningfull (not mostly black) screenshots.- "see":definitions/Screenshot.yaml
-* Ensure that the generated screenshots contain the titel bar. Needs a simple window manager (like lwm, awesome,xfwmw4 or even a whole desktop like xfce4)
-* Add some rake tasks to easily test core components and publishing the docker image
-* Rework visiting all Views and Perspectives to use the Jubula-provided tools
-* Migrate to use Java-based UI test automation. This should ease the pain from other developpers to get a head start.
+* -Ensure that the generated screenshots contain the titel bar. Needs a simple window manager (like lwm, awesome,xfwmw4 or even a whole desktop like xfce4)-
+* Add some -rake tasks to easily test core components- and publishing the docker image
+* -Rework visiting all Views and Perspectives to use the Jubula-provided tools-
+* -Migrate to use Java-based UI test automation. This should ease the pain from other developpers to get a head start-
+* Pending migration work items are
+** Visit all preferences
+** Import Artikelstamm
+** Create patient
+** Create consultation
+** Add article to consultation
+** Invoice consultation
+** Create Patient
+** Install all possible features
+** Test upgrade
 * Add a custom articlestamm.xml with a good selection of drugs to make a good demo
 * Find a way to properly identify each tab of a combo, e.g. the various articlestamm
 * Rework some Elexis-GUI elements, e.g.
@@ -87,4 +100,9 @@ bc. 14.11.15 00:57:22 - AUT Agent:  Connecting to "172.17.0.51:6333" ...
 
 h3. Object mapping
 
-I always had a hard time to find that Ctrl-Shift-Q was the default key to collect a compontent from Elexis. This is configured under Preferences..Test..Object Mapping
+I always had a hard time to find that Ctrl-Shift-Q (default was Ctrl-Shift-A) was the default key to collect a compontent from Elexis. This is configured under Preferences..Test..Object Mapping
+
+h1. pitfalls
+
+If you use a logger inside a test, running via maven may block. E.g. testsuites/Screenshot.java
+
