--- a/readme.textile
+++ b/readme.textile
@@ -28,14 +28,16 @@ h3. Catch up with previous capabilities
 ** -Visit all preferences-
 ** -Import Artikelstamm- but it fails, because it has changed from 3.0 to 3.1
 ** -Create patient-
-** create case
-** create consultation
-** Add article to consultation
-** Invoice consultation
-** Install all possible features
+** -Install all possible features-
+** -Show About SW- (saves a configuration report, too)
+** -create case-
+** -create consultation-
+** -create eigenleistung-
+** -Add eigenleistung to consultation-
+** -Invoice consultation-
 ** Test upgrade
 
-h3. Improvements
+h3. pending improvements
 
 * Artikelstamm
 ** Support OpenSource useage of Artikelstamm
@@ -43,10 +45,9 @@ h3. Improvements
 ** Check whether we need any scripts from the db_check
 * -Test whether we are able to input umlauts and other special characters-
 * Add a custom articlestamm.xml with a good selection of drugs to make a good demo
-* Find a way to properly identify each tab of a combo, e.g. the various articlestamm
 * Rework some Elexis-GUI elements, e.g.
-** DatePickers should allow entering a date via the keyboard. This is needed when a consultation for a previous date has to be entered
-* Complete basic tests til we can prove that Elexis creates correct bills
+** -DatePickers should allow entering a date via the keyboard. This is needed when a consultation for a previous date has to be entered- Done. Thanks to marco! see "commit":https://github.com/elexis/elexis-3-core/commit/b83089cc72c01c20b06aa9f1aaf86964f6eb9469
+* Complete basic tests until we can prove that Elexis creates correct bills
 * As we have now the whole Jubula installed inside the container, we should copy the jar from within the container!
 
 h2. concepts
