--- a/readme.textile
+++ b/readme.textile
@@ -4,48 +4,14 @@ h1. Jubula GUI tests for Elexis 3.1
 
 Here Niklaus tries to make a new, better environment for running the Jubula GUI-tests.
 
+h2. Continuos integration
 
-h2. TODO
+Have a look at the "Jubula-Matrix":https://srv.elexis.info/jenkins/job/Elexis-3.0-Jubula-Matrix-Linux/ on elexis.info.
 
-The following improvements are planned. Order may be varied depending whether we will encounter unforeseen problems.
+The tests there are running all inside a docker container @ngiger/jubula_runner@, which has all the needed programs. Tests may use the MySql and PostgreSQL database, where the user @elexis@ (with password elexisTest) got granted unlimited rights to the database
 
-h3. Catch up with previous capabilities
+There are some rake task (shown via @rake -T@ or more verbose @rake -D@) to facilitate some stuff, which would have take much longer via Java.
 
-* -Move to current Jubula-Version 8.2.-
-* Simplify vastly the ruby scripts. Ideas are:
-** -Move all config-variables in one (or more) YAML-files- "see":defaults.yaml. They may be overriden be putting your changes into config.yaml
-** -Add simple script to download Elexis-Opensource from Jenkin-CI- "see":scripts/install_open_source_elexis.rb
-** Add simple script to use Medelexis-Zip/license.xml from a given local directory
-** -Add the jubula*jar for running the tests to this project for easy installation- "see":scripts/run_jubula_test.rb
-*** -This file must patch the config.ini or the AUTagent will not start!-
-* -Run Jubula-Tests inside a docker environment (to work around libwebkit-gtk problem under Linux)-
-* -Test steps above with a very simple Jubula GUI test which creates only a screenshot of the main window. Must check whether running in a docker will create meaningfull (not mostly black) screenshots.- "see":definitions/Screenshot.yaml
-* -Ensure that the generated screenshots contain the titel bar. Needs a simple window manager (like lwm, awesome,xfwmw4 or even a whole desktop like xfce4)-
-* Add some -rake tasks to easily test core components- and publishing the docker image
-* -Rework visiting all Views and Perspectives to use the Jubula-provided tools-
-* -Migrate to use Java-based UI test automation. This should ease the pain from other developpers to get a head start-
-* Pending migration work items are
-** -Visit all preferences-
-** -Import Artikelstamm- but it fails, because it has changed from 3.0 to 3.1
-** -Create patient-
-** -Install all possible features-
-** -Show About SW- (saves a configuration report, too)
-** -create case-
-** -create consultation-
-** -create eigenleistung-
-** -Add eigenleistung to consultation-
-** -Invoice consultation-
-** Test upgrade
-
-h3. pending improvements
-
-* Artikelstamm
-** Show migration of legecy (stock, billing)
-** Check whether we need any scripts from the db_check
-* -Test whether we are able to input umlauts and other special characters-
-* Rework some Elexis-GUI elements, e.g.
-** -DatePickers should allow entering a date via the keyboard. This is needed when a consultation for a previous date has to be entered- Done. Thanks to marco! see "commit":https://github.com/elexis/elexis-3-core/commit/b83089cc72c01c20b06aa9f1aaf86964f6eb9469
-* Complete basic tests until we can prove that Elexis creates correct bills
 
 h2. concepts
 
@@ -109,6 +75,11 @@ It took my quite a few hours to overcome the following problems
 * When I invoked @system@ inside rake when call rake jubula_docker, starting the AUT failed, too.
 * Calling directly @scripts/jubularunner.rb run_in_docker Screenshot@ blocked also
 * Calling @rake jubula_docker@ worked
+* We ran the docker in in a Debian (Jessie) homes, which had docker-engine 1.11 installed. Additionally the following code was run
+bc. groupadd --gid 1200 elexis
+useradd --uid 1200 --gid 1200 elexis
+apt-get install -y docker-engine bundler maven xvfb
+
 
 h3. Object mapping
 
@@ -157,3 +128,46 @@ The following steps were needed
 *** Select the Test class to the test you want to run, e.g. @ch.ngiger.jubula.testsuites.Smoketest@
 *** In the tab "Arguments" set "VM arguments" to @-Dagent_host=wheezy@
 *** Choose Debug. If everything is okay it will connect to the autagent, start Elexis and begin executing the tests, which will quite soon open a menu.
+
+
+h2. TODO
+
+The following improvements are planned. Order may be varied depending whether we will encounter unforeseen problems.
+
+h3. Catch up with previous capabilities
+
+* -Move to current Jubula-Version 8.2.-
+* Simplify vastly the ruby scripts. Ideas are:
+** -Move all config-variables in one (or more) YAML-files- "see":defaults.yaml. They may be overriden be putting your changes into config.yaml
+** -Add simple script to download Elexis-Opensource from Jenkin-CI- "see":scripts/install_open_source_elexis.rb
+** Add simple script to use Medelexis-Zip/license.xml from a given local directory
+** -Add the jubula*jar for running the tests to this project for easy installation- "see":scripts/run_jubula_test.rb
+*** -This file must patch the config.ini or the AUTagent will not start!-
+* -Run Jubula-Tests inside a docker environment (to work around libwebkit-gtk problem under Linux)-
+* -Test steps above with a very simple Jubula GUI test which creates only a screenshot of the main window. Must check whether running in a docker will create meaningfull (not mostly black) screenshots.- "see":definitions/Screenshot.yaml
+* -Ensure that the generated screenshots contain the titel bar. Needs a simple window manager (like lwm, awesome,xfwmw4 or even a whole desktop like xfce4)-
+* Add some -rake tasks to easily test core components- and publishing the docker image
+* -Rework visiting all Views and Perspectives to use the Jubula-provided tools-
+* -Migrate to use Java-based UI test automation. This should ease the pain from other developpers to get a head start-
+* Pending migration work items are
+** -Visit all preferences-
+** -Import Artikelstamm- but it fails, because it has changed from 3.0 to 3.1
+** -Create patient-
+** -Install all possible features-
+** -Show About SW- (saves a configuration report, too)
+** -create case-
+** -create consultation-
+** -create eigenleistung-
+** -Add eigenleistung to consultation-
+** -Invoice consultation-
+** Test upgrade
+
+h3. pending improvements
+
+* Artikelstamm
+** Show migration of legecy (stock, billing)
+** Check whether we need any scripts from the db_check
+* -Test whether we are able to input umlauts and other special characters-
+* Rework some Elexis-GUI elements, e.g.
+** -DatePickers should allow entering a date via the keyboard. This is needed when a consultation for a previous date has to be entered- Done. Thanks to marco! see "commit":https://github.com/elexis/elexis-3-core/commit/b83089cc72c01c20b06aa9f1aaf86964f6eb9469
+* Complete basic tests until we can prove that Elexis creates correct bills
